# dicl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dynamic_programming.py  install.sh  pyproject.toml  requirements.txt  rl_disc_utils.py  rl_poc.ipynb  rl_utils.py  utils.py
data/: series_generator.ipynb  series_generator_RL.ipynb
dicl/main/: dicl.py
dicl/rl/: sac_continuous_action.py  sac_continuous_action_dicl.py
dicl/utils/: calibration.py
figures_analysis/: auto_completion_plot.ipynb  experiment_plots.ipynb  fig_2_3_oussama.ipynb  markov_chain_analyzer.ipynb  multi_digit_analyzer_BM.ipynb  multi_digit_analyzer_GBM.ipynb  multi_digit_analyzer_gym.ipynb  multi_digit_analyzer_logistic.ipynb  multi_digit_analyzer_lorenz.ipynb  multi_digit_analyzer_noisy_logistic.ipynb
figures_analysis/pickled_files/: branch_list.pkl  branch_list_13b.pkl  branch_list_70b.pkl  branch_list_7b.pkl
generated_series/: brownian_motion_0.pkl  brownian_motion_1.pkl  brownian_motion_10.pkl  brownian_motion_11.pkl  brownian_motion_12.pkl  brownian_motion_13.pkl  brownian_motion_14.pkl  brownian_motion_15.pkl  brownian_motion_16.pkl  brownian_motion_17.pkl  brownian_motion_18.pkl  brownian_motion_19.pkl  brownian_motion_2.pkl  brownian_motion_3.pkl  brownian_motion_4.pkl  brownian_motion_5.pkl  brownian_motion_6.pkl  brownian_motion_7.pkl  brownian_motion_8.pkl  brownian_motion_9.pkl  correlated_gaussian_0.pkl  correlated_gaussian_1.pkl  correlated_gaussian_2.pkl  correlated_gaussian_3.pkl  correlated_gaussian_4.pkl  correlated_gaussian_5.pkl  correlated_gaussian_6.pkl  correlated_gaussian_7.pkl  correlated_gaussian_8.pkl  correlated_gaussian_9.pkl  geometric_brownian_motion_0.pkl  geometric_brownian_motion_1.pkl  geometric_brownian_motion_10.pkl  geometric_brownian_motion_11.pkl  geometric_brownian_motion_12.pkl  geometric_brownian_motion_13.pkl  geometric_brownian_motion_14.pkl  geometric_brownian_motion_15.pkl  geometric_brownian_motion_16.pkl  geometric_brownian_motion_17.pkl  (+99 more)
models/: ICL.py  RL_Cartpole.ipynb  RL_MC_OT_Random_MDPs.ipynb  Rl_MC_OT.ipynb  Rl_prediction_error.ipynb  generate_predictions.ipynb  generate_predictions_RL.ipynb  gpt.py  icl_script.py  llama.py  non_markovian.ipynb
processed_series/: brownian_motion_12.pkl  brownian_motion_13.pkl  brownian_motion_14.pkl  brownian_motion_15.pkl  brownian_motion_16.pkl  brownian_motion_17.pkl  brownian_motion_18.pkl  brownian_motion_19.pkl  brownian_motion_2.pkl  brownian_motion_3.pkl  correlated_gaussian_0.pkl  correlated_gaussian_1.pkl  correlated_gaussian_2.pkl  correlated_gaussian_3.pkl  correlated_gaussian_4.pkl  correlated_gaussian_5.pkl  correlated_gaussian_6.pkl  correlated_gaussian_7.pkl  correlated_gaussian_8.pkl  correlated_gaussian_9.pkl  geometric_brownian_motion_10.pkl  geometric_brownian_motion_11.pkl  geometric_brownian_motion_12.pkl  geometric_brownian_motion_13.pkl  geometric_brownian_motion_2.pkl  geometric_brownian_motion_3.pkl  geometric_brownian_motion_4.pkl  geometric_brownian_motion_5.pkl  geometric_brownian_motion_6.pkl  geometric_brownian_motion_7.pkl  geometric_brownian_motion_8.pkl  geometric_brownian_motion_9.pkl  logistic_map_0.pkl  logistic_map_1.pkl  logistic_map_10.pkl  logistic_map_11.pkl  logistic_map_12.pkl  logistic_map_13.pkl  logistic_map_14.pkl  logistic_map_2.pkl  (+75 more)
src/LLMICL.egg-info/: PKG-INFO
src/dicl/: dicl.py  getting_started.ipynb
src/dicl/RL/: sac_continuous_action.py  sac_continuous_action_dicl.py
src/dicl/icl/: iclearner.py
src/dicl/main/: dicl.py  iclearner.py
src/dicl/rl/: sac_continuous_action.py  sac_continuous_action_dicl.py
src/dicl/utils/: calibration.py  updated_from_liu_et_al.py
src/llmicl/: api_example.ipynb  basic_example.ipynb  basic_example_rl.ipynb  getting_started.ipynb
src/llmicl/RL/: sac_continuous_action_dicl.py
src/llmicl/interfaces/: dicl.py  trainers.py
src/llmicl/main/: dicl.py  iclearner.py
src/llmicl/matrix_completion/: matrix completion.ipynb  utils.py
src/llmicl/notebooks/: bertviz.ipynb  entropy_and_state_cov.ipynb  error_plots.ipynb  goal2d.ipynb  ks_r2_multi_step_metrics.ipynb  metropolis_hastings.ipynb  ope.ipynb  ope_last_minute.ipynb  return_plots.ipynb  (+1 more)
(+28 files in other folders)
